# Woodpecker

./: .gitignore  README.md  pyproject.toml
woodpecker/: __init__.py  __main__.py
woodpecker/cli/: cmd_compare_waveforms.py  cmd_extract.py  cmd_extract_track_waveform.py  cmd_frames_to_root.py  cmd_mask.py  cmd_plot_frames.py  cmd_run_clustering.py  cmd_run_img.py  cmd_run_nfsp.py  cmd_run_sim_check.py  cmd_select.py  cmd_select_parallelogram.py  main.py
woodpecker/core/: exceptions.py  registry.py  selection.py
woodpecker/gui/: app.py  controller.py  overlays.py  widgets.py
woodpecker/io/: base.py  cluster_source.py  frame_data.py  frame_source.py
woodpecker/pipeline/: context.py  runner.py
woodpecker/processing/: base.py  masker.py  sim_driver.py  track_extractor.py
woodpecker/tools/: zip-upload.sh
